force-app/main/default/objects/RC_panelist_junction_student_test__c/RC_panelist_junction_student_test__c.object-meta.xml
<CustomObject>
    <label>RC_panelist_junction_student_test</label>
    <nameField>
        <displayFormat>Panelist_jun-{0000}</displayFormat>
        <label>RC_panelist_junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RC_panelist_junction_student_tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>