force-app/main/default/objects/RC_panelist_junction_student_test__c/fields/assigned_panelist_round__c.field-meta.xml
<CustomField>
    <fullName>assigned_panelist_round__c</fullName>
    <defaultValue>0</defaultValue>
    <label>assigned_panelist_round</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>