force-app/main/default/objects/RC_panelist_junction_student_test__c/fields/panelist_id__c.field-meta.xml
<CustomField>
    <fullName>panelist_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>panelist_id</label>
    <referenceTo>RC_panelist__c</referenceTo>
    <relationshipName>RC_panelist_junction_students</relationshipName>
    <type>Lookup</type>
</CustomField>