force-app/main/default/objects/RC_panelist_junction_student_test__c/fields/student_test_id__c.field-meta.xml
<CustomField>
    <fullName>student_test_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>student_test_id</label>
    <referenceTo>RC_student_test__c</referenceTo>
    <relationshipLabel>RC_panelist_junction_student_tests</relationshipLabel>
    <relationshipName>RC_panelist_junction_student_tests</relationshipName>
    <type>Lookup</type>
</CustomField>