force-app/main/default/objects/RC_panelist_junction_student_test__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>assigned_panelist_round__c</columns>
    <columns>student_test_id__c</columns>
    <columns>panelist_id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>